tech blogs done

--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,17 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+#blog {
+  margin-top: 2%;
+  word-wrap: inherit;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#blogCol {
+  padding: 20px;
+}
+
+#date {
+  margin-bottom: 3%;
+}
