--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,7 @@ body {
 
 #blog {
   margin-top: 2%;
+  margin-bottom: 2%;
   word-wrap: inherit;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -69,4 +70,11 @@ body {
 
 #date {
   margin-bottom: 3%;
+}
+
+#navBlog {
+  margin-top: 2%;
+  display: inline-block;
+  float: none;
+  vertical-align: top;
 }
