--- a/src/App.css
+++ b/src/App.css
@@ -81,3 +81,15 @@ body {
   float: none;
   vertical-align: top;
 }
+
+#contactCard {
+  margin: 0 auto;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 2%;
+
+  border-radius: 4px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+  text-align: left;
+}
