--- a/src/App.css
+++ b/src/App.css
@@ -84,12 +84,47 @@ body {
 
 #contactCard {
   margin: 0 auto;
-
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  max-width: 1170px;
+  width: 95%;
+  box-shadow: 0 4px 8px 0 rgba(250, 22, 22, 0.2),
+    0 6px 20px 0 rgba(247, 12, 12, 0.19);
   padding: 2%;
-
+  padding-left: 2%;
   border-radius: 4px;
   margin-top: 4%;
   margin-bottom: 4%;
   text-align: left;
+}
+
+#imgCircle {
+  border: 1px solid rgba(216, 44, 44, 0.432);
+}
+
+#contactLink {
+  font-size: 1.2em;
+  margin-right: 2%;
+  padding-top: 5%;
+}
+
+@media only screen and (max-width: 768px) {
+  #contactCard {
+    font-size: 0.75em;
+    padding-right: 1%;
+  }
+  #imgCircle {
+    height: 64px;
+    width: 64px;
+
+    margin-left: 28%;
+  }
+}
+
+#contactLink:hover {
+  text-decoration: none;
+  color: black;
+}
+
+#center {
+  margin: 0 auto;
+  max-width: 600px;
 }
