--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* Main, Nav and Intro pages */
+
 html,
 body {
   height: 100%;
@@ -13,6 +15,11 @@ body {
 .navbar {
   margin-bottom: 0 !important;
   border-radius: 0px !important;
+  font-size: 1.3em;
+}
+
+#navBrand {
+  color: white !important;
 }
 
 #mainImg {
@@ -23,6 +30,8 @@ body {
     ),
     url(/bg.jpg);
 }
+
+/* Portfolio Pages */
 
 #port {
   margin-top: 4%;
@@ -53,6 +62,8 @@ body {
     url(/portfolioheader.png);
 }
 
+/* Blog Pages */
+
 #center-tabs {
   margin: 0 auto !important;
   width: 100%;
@@ -82,6 +93,15 @@ body {
   vertical-align: top;
 }
 
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:focus,
+.nav-pills > li.active > a:hover {
+  background-color: rgba(219, 89, 57, 0.801) !important;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+/* Contact Page */
+
 #contactCard {
   margin: 0 auto;
   max-width: 1170px;
@@ -103,6 +123,7 @@ body {
   font-size: 1.2em;
   margin-right: 2%;
   padding-top: 5%;
+  color: black;
 }
 
 @media only screen and (max-width: 768px) {
@@ -124,13 +145,19 @@ body {
 
 #contactLink:hover {
   text-decoration: none;
-  color: black;
+  color: rgba(219, 57, 57, 0.801);
 }
 
 #center {
   margin: 0 auto;
   max-width: 600px;
 }
+
+#pixel {
+  color: rgba(219, 57, 57, 0.801);
+}
+
+/* About Page */
 
 #wellLeft {
   box-shadow: 0 4px 8px 0 rgba(250, 22, 22, 0.2),
