--- a/src/App.css
+++ b/src/App.css
@@ -178,3 +178,31 @@ body {
   width: 100%;
   text-align: justify;
 }
+
+/* Other */
+
+#top {
+  color: white;
+  font-size: 1.2em;
+  float: right;
+  margin-right: 2%;
+  margin-top: 1.5%;
+  /* border: 1px solid red; */
+  padding: 0.5%;
+  /* background-color: rgba(247, 12, 12, 0.19); */
+}
+
+#top:hover {
+  text-decoration: none;
+  color: black;
+  /* background-color: rgb(255, 123, 0); */
+}
+
+#arrow {
+  color: white;
+  font-size: 1.5em;
+}
+
+#arrow:hover {
+  color: black;
+}
