final css touch ups for iphone5

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,13 @@ body {
 #port {
   margin-top: 4%;
   min-height: 385px;
-  min-width: 350px;
+  min-width: 300px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#portfolio-col {
+  width: 95%;
+  margin-left: 2.5%;
 }
 
 #port:hover {
@@ -72,8 +77,8 @@ body {
 }
 
 #blog {
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin-top: 4%;
+  margin-bottom: 4%;
   word-wrap: inherit;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -135,11 +140,30 @@ body {
   #imgCircle {
     height: 64px;
     width: 64px;
-
+    margin-top: 40%;
     margin-left: 28%;
   }
   #contactHead {
     margin-left: 14%;
+  }
+  #arrow {
+    margin-top: 50%;
+  }
+  #aboutPage {
+    margin-top: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    text-align: justify;
+  }
+  #wellLeft {
+    min-width: 90%;
+    margin-top: 2%;
+    margin-left: 5%;
+  }
+  #wellRight {
+    min-width: 90%;
+    margin-left: 5%;
   }
 }
 
@@ -187,15 +211,12 @@ body {
   float: right;
   margin-right: 2%;
   margin-top: 1.5%;
-  /* border: 1px solid red; */
   padding: 0.5%;
-  /* background-color: rgba(247, 12, 12, 0.19); */
 }
 
 #top:hover {
   text-decoration: none;
   color: black;
-  /* background-color: rgb(255, 123, 0); */
 }
 
 #arrow {
